<resources>
    <string name="app_name">Koboard</string>
    <string name="title_activity_kognotte">Kognotte</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="server_client_id">773920643892-1pcn3l9pdjq5otgrna2bi98ffud73vlo.apps.googleusercontent.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="konote">Konote</string>
    <string name="kotemps">Kotemps</string>
    <string name="kourse">Kourse</string>
    <string name="home">Home</string>
    <string name="kochat">Kochat</string>
    <string name="kognotte">Kognotte</string>
    <string name="koulette">Koulette</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="save">Save</string>
    <string name="eventname">EventName</string>
    <string name="event_name">Event Name</string>
    <string name="refresh">Refresh</string>
    <string name="month_year">Month - Year</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="end_at">End at :</string>
    <string name="start_at">Start at :</string>
    <string name="participant">Participant</string>
    <string name="nouvelle_d_pense">Nouvelle dépense</string>
    <string name="pour_qui">Pour qui</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="alexandre">Alexandre</string>
    <string name="_0_00">0,00 €</string>
    <string name="_135">+ 135 €</string>
    <string name="cinema">Cinema</string>
    <string name="date">10/03/2020</string>
    <string name="pay_par">Payé par :</string>
    <string name="montant">Montant :</string>
    <string name="participantHeader">Participant(s) :</string>
    <string name="_82_6">82.6</string>
    <string name="listeNom">Alexandre\nFred\nPadteonv</string>
    <string name="historique">Historique</string>
    <string name="ajouter_une_d_pense">Ajouter une dépense</string>
    <string name="noteHeader">Notes</string>
    <string name="rechercher">Rechercher</string>
    <string name="sans_titre">Sans Titre</string>
    <string name="resume">Si tu veux la traduction ...</string>
    <string name="valider">Valider</string>
    <string name="titre">Titre</string>
    <string name="quantity">Quantity</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="new_list">New List</string>
    <string name="kusique">Kusique</string>

    <string name="title_activity_remote_java">SDK Remote jv</string>
    <string name="title_activity_remote_kotlin">SDK Remote kt</string>

    <!-- Errors -->
    <string name="err_spotify_disconnected">"Spotify is not Connected. Use one of the 'connect' buttons"</string>
    <string name="err_generic_toast">An error has occurred. Check the logs to know more.</string>

    <!-- Connect Auth -->
    <string name="connect">Connect</string>
    <string name="authorize">Connect and Authorize</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>

    <!-- Controls -->
    <string name="on_demand_feedback">Can play on demand? %1$s</string>
    <string name="is_in_collection_feedback">Is in the user collection? %1$s</string>
    <string name="command_feedback">"'%1$s' command successful!"</string>
    <string name="command_response">"'%1$s' command response"</string>
    <string name="connect_switch_to_local">Switch to Local Playback</string>
    <string name="play_podcast_button_label">Play podcast</string>
    <string name="play_album_button_label">Play album</string>
    <string name="play_artist_button_label">Play artist</string>
    <string name="play_playlist_button_label">Play playlist</string>
    <string name="play_track_button_label">Play track</string>
    <string name="get_collection_state">Get Collection state</string>
    <string name="save_uri">Save to Collection</string>
    <string name="remove_uri">Remove from Collection</string>
    <string name="browse_content">Browse Content</string>
    <string name="subscribe_to_capabilities">Get Capabilities</string>
    <string name="subscribe_to_current_track">Subscribe to playerstate</string>
    <string name="subscribe_to_player_context">Subscribe to playercontext</string>
    <string name="title_player_context">Player Context</string>
    <string name="title_current_track">Current Track</string>
    <string name="title_image_size">Image size</string>
    <string name="title_image_scale_type">Scale type</string>
</resources>