<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_delete_depense"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:src="@drawable/delete" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_object_depense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/cinema"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/tv_date_depense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/date"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/tv_paye_par_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_par"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tv_montant_historique_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montant"
            android:textColor="#000000"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/tv_paye_par_header"
            android:layout_toLeftOf="@+id/tv_participants_header"/>

        <TextView
            android:id="@+id/tv_participants_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participantHeader"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_paye_par"
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:text="@string/alexandre"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_marginLeft="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tv_montant_historique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_82_6"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_toRightOf="@+id/tv_paye_par"
            android:layout_toLeftOf="@+id/tv_participants"/>

        <TextView
            android:id="@+id/tv_participants"
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/listeNom"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</LinearLayout>