<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Konote.KonoteFragmentDetailNote"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="100">

    <EditText
        android:id="@+id/tv_note_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titre"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:layout_marginBottom="10dp"/>

    <com.hendraanggrian.appcompat.widget.SocialAutoCompleteTextView
        android:id="@+id/tv_note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Note"
        android:gravity="top|left"
        android:layout_weight="95"
        android:background="@android:color/transparent"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_note_valide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:layout_marginRight="100dp"/>
        <Button
            android:id="@+id/btn_note_annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler" />

    </LinearLayout>



</LinearLayout>