<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nouvelle_d_pense"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/object_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <EditText
                android:id="@+id/et_object_depense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Titre dépense" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/montant_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <EditText
                android:id="@+id/et_montant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:ems="10"
                android:hint="Montant" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"/>

        <EditText
            android:id="@+id/et_date_depense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:ems="10"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Payé par"/>
        <Spinner
            android:id="@+id/sp_paye_par"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@android:array/emailAddressTypes"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_checkAllUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pour_qui"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lv_listeParticipant"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:entries="@android:array/emailAddressTypes"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_annuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#69D380"
                android:layout_marginRight="25dp"
                android:text="@string/annuler" />

            <Button
                android:id="@+id/btn_ajouter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#69D380"
                android:text="@string/ajouter"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>